Escape error-notes correctly PR 40952

git-svn-id: https://svn.apache.org/repos/asf/httpd/httpd/trunk@573939 13f79535-47bb-0310-9956-ffa450edef68